--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+LicençasFloripa/Anexos/FloripaSec108.exe
+LicençasFloripa/Anexos/FloripaSec233.exe
